# CppND-Capstone-Snake-Game

./: .gitignore  CMakeLists.txt  README.md  ideas.txt
cmake/: FindSDL2_IMAGE.cmake  FindSDL2_mixer.cmake
src/: audio.cpp  audio.h  audio_player.cpp  audio_player.h  controller.cpp  controller.h  game.cpp  game.h  renderer.cpp  renderer.h  snake.h
